@@ -1,5 +1,11 @@
 2006-05-02  Brian Cameron  <brian.cameron@sun.com>
 
+        * config/gdm.conf-custom: Added comment before [servers] section
+          to address bug #340333.
+	* config/gdm.conf.in: Updated comments.
+
+2006-05-02  Brian Cameron  <brian.cameron@sun.com>
+
 	* config/gettextfoo.h: Updated to reflect the current strings.
 	  Fixing bug #340017.
 
